--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <header>
+    <header> <!--Name and Title-->
       <h1> Josef Carlisle Nicholai Carisbarone </h1>
         <p> Software Engineering Student </p>
     </header>
    
-    <main> <!-- personal introduction and web development foals -->
+    <main> <!-- Intro section  and web development goals -->
       <img src="Images/CarlisleBlackSuit.jpg">
       <div>
         <h2>Hello and Welcome to my Personal Webpage!</h2>
@@ -50,7 +50,7 @@
     </div>
 
     </article>
-    <footer>
+    <footer> <!-- information copyright section -->
       <p> ©Josef C. N. Carisbarone</p>
       <img src="Images/FamilyCrest.jpg">
     </footer>
