--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
     <div>
       <article><!--basic information about me and my goals-->
         <h3> About Carlisle </h3>
-          <p> I initially majored in History and Political Science  from the University of South Florida. But after gradutating from USF, I realized, while I had a passion for History and Political Science, there were not many opportunites to make a living in the currenlty hyper-charged political climate.</p>
-          <p> After floundaring in several dead-end hourly jobs, I conlcuded that I wanted more for my life. At the advice of a good friend of, I began to look into computer based jobs and what I would need to pursue such a career. </p>
-          <p> I studied for a year of on my own, utilizing such programs as The Oden Project and skillshare JavaScript courses, I decided I would like to do this for a living and looked to ThinkFul to jumpstart my career move and move me foward into the field.</p>
-          <p> While I am only just getting started, I am very excited about learning to Code and develop Webpages and see what doors open up for me as I finished the Thinkful program.</p>
+          <p> I initially majored in History and Political Science  from the University of South Florida. But after gradutating from USF, I realized, while I had a passion for History and Political Science, there were not many opportunites to make a life I had alwats dreamed for myself.</p>
+          <p> At the advice of a good friend, I began to look into web developement via a few free intro cources and found that I really enjoyed it. After looking a bit deeper into what would be needed to pursue it, I decided to dive in and make the change.  </p>
+          <p> I studied for a year of on my own, utilizing such programs as The Oden Project and skillshare JavaScript courses, I realized this was going to be harder than I had expected, but the more I learned, the more I realized how much I wanted to be good at this and how excited I was to learn more. </p>
+          <p> I enjoy looking at the ideas that other developers have come up with to answer the same questions and scenarios I have been faced with, and have enjoyed learning from those who have come before me on this path. I am even more excitied to get to be able to work with other developers and may help each other grow as we learn to be better coders and developers together. </p>
+          <p> While I am only just getting started, I am very excited about learning to Code and developing useful and interactive Webpages, seeing doors open up for me as I move along this new path for my life. .</p>
       </article>
     </div>
       <hr>
