--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html lang="eng">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -12,7 +12,7 @@
     </header>
    
     <main> <!-- Intro section  and web development goals -->
-      <img src="Images/CarlisleBlackSuit.jpg">
+      <img src="Images/CarlisleBlackSuit.jpg" alt="Carlisle Carisbarone">
       <div>
         <h2>Hello and Welcome to my Personal Webpage!</h2>
         <h3> My name is Josef Carisbarone </h3>
@@ -44,16 +44,16 @@
         <h3> Contact information </h3>
                <p> Please feel free to reach out to me with any questions or to look at some of my work using the links below</p>
           <ol>
-             <li><a href="https://www.linkedin.com/in/josef-carlisle-carisbarone-19812869/">LinkedIn</li></a>
-            <li><a href="https://github.com/LisleCarisbarone" >GitHub</li></a>
-            <li><a href="mailto:Carisbarone@mail.com">Email</li></a>
+             <li><a href="https://www.linkedin.com/in/josef-carlisle-carisbarone-19812869/">LinkedIn</a></li>
+            <li><a href="https://github.com/LisleCarisbarone" >GitHub</a></li>
+            <li><a href="mailto:Carisbarone@mail.com">Email</a></li>
           </ol>
+        </article>
     </div>
 
-    </article>
     <footer> <!-- information copyright section -->
       <p> ©Josef C. N. Carisbarone</p>
-      <img src="Images/FamilyCrest.jpg">
+      <img src="Images/FamilyCrest.jpg" alt="Carisbarone Family Crest">
     </footer>
     <script src="script.js"></script>
   </body>
