--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div>
         <h2>Hello and Welcome to my Personal Webpage!</h2>
         <h3> My name is Josef Carisbarone </h3>
-        <p> I am currenlty pursuing Software Engineering and Development as a Student with <a href="https://www.thinkful.com/">ThinkFul</a>. I live in Tampa, Florida at the momemt. But will soon be transiting to Tucson, Arizona by the end of August 2020.
+        <p> I am currently pursuing Software Engineering and Development as a Student with <a href="https://www.thinkful.com/">ThinkFul</a>. I live in Tampa, Florida at the momemt. But will soon be transiting to Tucson, Arizona by the end of August 2020.
         </p>
         <p> I am excited to move into the field of Web Development, and will work to develop:
          <ul>
