--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </header>
       <hr>
     <div class="navbar">
-      <a href="#home">Home</a>
-      <a href="#news">News</a>
+      <a href="index.html">Home</a>
+      <a href="#news">Projects</a>
     </div>
    <hr>
     <main> <!-- Intro section  and web development goals -->
