--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <hr>
     <div class="navbar">
       <a href="index.html">Home</a>
-      <a href="#news">Projects</a>
+      <a href="projects.html">Projects</a>
     </div>
    <hr>
     <main> <!-- Intro section  and web development goals -->
