--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,9 @@
     <link href="ProjectsStyle.css" rel="stylesheet" type="text/css" />	  
 </head>	  
 <body>
-
+  <div>
+    <p>Rock, Paper, Scissors Game </p>
+    <p>A introductory Rock, Paper, Scissors Game as organized and directed by <a href="https://www.theodinproject.com/home">The Oden Project</a></p>
+  </div>
 </body>
 </html>
