--- a/projects.html
+++ b/projects.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link href="style.css" rel="stylesheet" type="text/css" />	  
-</head>	  
-<body>
+     <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <header> <!--Name and Title-->
+      <h1> Josef Carlisle Nicholai Carisbarone </h1>
+        <p> Software Engineering Student </p>
+    </header>
+      <hr>
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+    </div>
+   <hr>
   <div>
     <p>Rock, Paper, Scissors Game </p>
     <p>A introductory Rock, Paper, Scissors Game as organized and directed by <a href="https://www.theodinproject.com/home">The Oden Project</a></p>
