--- a/projects.html
+++ b/projects.html
@@ -20,5 +20,10 @@
     <p>Rock, Paper, Scissors Game </p>
     <p>A introductory Rock, Paper, Scissors Game as organized and directed by <a href="https://www.theodinproject.com/home">The Oden Project</a></p>
   </div>
-</body>
+ <footer> <!-- information copyright section -->
+      <p> ©Josef C. N. Carisbarone</p>
+      <img src="Images/FamilyCrest.jpg" alt="Carisbarone Family Crest">
+    </footer>
+    <script src="script.js"></script>
+  </body>
 </html>
