--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
     </div>
    <hr>
   <div>
-    <p>Rock, Paper, Scissors Game </p>
+    <h2>Rock, Paper, Scissors Game </h2>
     <p>A introductory Rock, Paper, Scissors Game as organized and directed by <a href="https://www.theodinproject.com/home">The Oden Project</a></p>
   </div>
  <footer> <!-- information copyright section -->
