--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
    <hr>
   <div>
     <h2>Rock, Paper, Scissors Game </h2>
-    <p>A introductory Rock, Paper, Scissors Game as organized and directed by <a href="https://www.theodinproject.com/home">The Oden Project</a></p>
+    <p>  - A introductory Rock, Paper, Scissors Game as organized and directed by <a href="https://www.theodinproject.com/home">The Oden Project</a></p>
   </div>
  <footer> <!-- information copyright section -->
       <p> ©Josef C. N. Carisbarone</p>
