--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,7 @@
    <hr>
   <div>
     <h3>Rock, Paper, Scissors Game </h3>
+       <a href="RPSMain.html">Play Game!</a>
     <p>  - A introductory Rock, Paper, Scissors Game as organized and directed by <a href="https://www.theodinproject.com/home">The Oden Project.</a></p>
   </div>
  <footer> <!-- information copyright section -->
