--- a/RPSMain.html
+++ b/RPSMain.html
@@ -6,6 +6,10 @@
     <link href="RPSStyle.css" rel="stylesheet" type="text/css" />	  
 </head>	  
 <body>
+<div class="navbar">
+      	<a href="index.html">Home</a>
+	<a href="projects.html">Projects</a>
+</div>
 <div class="well text-center">
 		
 		<br><br><h1>Rock, Paper, Scissors </h1><br>
