--- a/RPSMain.html
+++ b/RPSMain.html
@@ -15,27 +15,24 @@
 <hr>
 <div class="well text-center">
 		
-		<br><br><h1>Rock, Paper, Scissors </h1><br>
+		<br><h1>Rock, Paper, Scissors </h1><br>
 		<h2>Lets play Rock, Paper, Scissors:<br> You versus the computer</h2>
-		<br><br> 
+		<br> 
 		<h3 id="textfield"></h3>
 	
-		<br><br><br>
+		<br><br>
 		<h3 id="textfield2"></h3>
 		
-		<br><br><br>
+		<br><br>
 		<input type="button" id="button" class="btn " value="rock" onclick="game()">
 		<input type="button" id="button" class="btn " value="paper" onclick="game()">
 		<input type="button" id="button" class="btn " value="scissors" onclick="game()">
 		
 	</div>
-	<br>
 	<div class="well text-center">
-		
 		<input type="reset" value="Play Again" onclick="reset()">
-
 	</div>
-	<br><br><hr><br>
+	<br><hr><br>
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm-12 col-md-6">
